--- a/packages/MenheraDashboard/src/components/activities/ActivityList.css
+++ b/packages/MenheraDashboard/src/components/activities/ActivityList.css
@@ -1,16 +1,60 @@
-th {
-  border-bottom: 1px solid black;
-}
-
-thead {
-  background-color: bisque;
-}
-
-tbody {
-  background-color: violet;
-}
-
 .activity-list {
-  display: grid;
+  margin: 25px 0;
   font-family: Arial, Helvetica, sans-serif;
+  color: #4f646f;
+}
+
+.activity-list #type-column {
+  text-align: start;
+}
+/*
+table thead tr {
+  display: block;
+  position: relative;
+}
+
+table tbody {
+  display: block;
+  overflow: auto;
+  width: 100%;
+  height: 300px;
+} */
+
+.activity-list table {
+  border-collapse: collapse;
+  width: 100%;
+  background-color: #DEE7E7;
+}
+
+.activity-list table thead tr {
+  background-color: #212529;
+  color: #DEE7E7;
+  text-align: center;
+  font-family: Roboto,"Helvetica Neue",Arial,sans-serif;
+
+}
+
+.activity-list table tbody {
+  overflow: auto
+}
+
+.activity-list table td,
+.activity-list table th {
+  padding: 12px 15px;
+}
+
+.activity-list table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+.activity-list table tbody tr:nth-of-type(even) {
+  background-color: #F4FAFF;
+}
+
+.activity-list table tbody tr:last-of-type {
+  border-bottom: 2px solid #212529;
+}
+
+.activity-list table tbody tr:hover {
+  color: #009879;
 }
